# genie-EL

./: .gitignore  CMakeLists.txt  ORIGINAL_LICENSE  README.md  install.sh
cmake/: FairSynConfig.cmake.in  FindCppHoafParser.cmake  FindCudd.cmake  FindSylvan.cmake  Findcudd.cmake  Findsylvan.cmake  GenieConfig.cmake.in
docs/: Doxyfile.in
include/lib/: Arena.hh  BaseFixPointEL_OLD.hh  BaseFixedPoint.hh  BaseFixpoint.hh  BaseFixpointEL.hh  BaseRabinAutomaton.hh  ELHelpers.hh  FixedPoint.hh  Makefile  ParallelRabinRecurse.hh  RabinAutomaton.hh  ZielonkaTree.cc  ZielonkaTree.hh  a.out  benchmarking.py  build.sh  condition_evaluation.hh  condition_evaluation_NEW.hh  condition_evaluation_OLD.hh  fairsyn.hh  m.cc  main.cc  test2.cfg  test_condition.txt
include/ubdd/: BaseUBDD.hh  CuddUBDD.hh  CuddUBDDMintermIterator.hh  SylvanUBDD.hh  SylvanUBDDMintermIterator.hh  UBDDMintermIterator.hh
include/utils/: TicToc.hh  hoa_consumer_build_rabin.hh
src/lib/: Arena.cpp  BaseFixedPoint.cpp  BaseFixpoint.cpp  BaseRabinAutomaton.cpp  FixedPoint.cpp
src/ubdd/: CuddUBDD.cpp  CuddUBDDMintermIterator.cpp  SylvanUBDD.cpp  SylvanUBDDMintermIterator.cpp
src/utils/: TicToc.cpp  hoa_consumer_build_rabin.cpp
test/: CMakeLists.txt
test/src/ubdd/: CuddUBDDMintermIteratorTests.cpp  CuddUBDDTests.cpp  SylvanTestHelper.h  SylvanUBDDMintermIteratorTests.cpp  SylvanUBDDTests.cpp  UBDDMintermIteratorTests.h  UBDDTests.h
test/test_cudd/: Makefile  test.cc
tests/: CMakeLists.txt  tests.cpp
tests/ubdd/: CuddUBDDMintermIteratorTests.cpp  CuddUBDDTests.cpp  SylvanTestHelper.h  SylvanUBDDMintermIteratorTests.cpp  SylvanUBDDTests.cpp  UBDDMintermIteratorTests.h  UBDDTests.h
thoughts/: Makefile  TMPCP_ZielonkaTree.cc  ZielonkaTree.cc  ZielonkaTree.hh  benchmarking.py  build.sh  condition_evaluation.hh  condition_evaluator.hh  construct_evaluator.py  eval.cpp  graph.py  graphnodes.py  main.cc  notes.md  proto_vectobdd.cc  run_benchmarks.sh  structures.hh  symbolic_notes.md  test1.cfg  test2.cfg  test3.cfg  test4.cfg  test5.cfg  test6.cfg  tmp_other.cfg  tmp_rabin.cfg  todo.md  tree1.txt  tree85.txt
ubdd/: BaseUBDD.hh  CMakeLists.txt  CuddUBDD.hh  CuddUBDDMintermIterator.hh  SylvanUBDD.hh  SylvanUBDDMintermIterator.hh  UBDDMintermIterator.hh
